--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "typing_extensions"]
+requires = ["scikit-build-core >=0.9.0", "nanobind >=1.3.2", "typing_extensions"]
 build-backend = "scikit_build_core.build"
 
 [project]
@@ -20,13 +20,16 @@ Homepage = "https://github.com/your/project"
 
 [tool.scikit-build]
 # Protect the configuration against future changes in scikit-build-core
-minimum-version = "0.4"
+minimum-version = "0.10"
 
 # Setuptools-style build caching in a local directory
 build-dir = "build/{wheel_tag}"
 
 # Build stable ABI wheels for CPython 3.12+
-wheel.py-api = "cp312"
+#wheel.py-api = "cp312"
+
+build.verbose = true
+logging.level = "INFO"
 
 #cmake.verbose = true
 #cmake.build-type = "Debug"
