--- a/.github/workflows/build_cibuildwheel.yml
+++ b/.github/workflows/build_cibuildwheel.yml
@@ -50,7 +50,7 @@ jobs:
           CIBW_ENVIRONMENT_LINUX: CXXFLAGS='-fconcepts' CMAKE_BUILD_PARALLEL_LEVEL='1'
           CIBW_ENVIRONMENT_WINDOW: CMAKE_BUILD_PARALLEL_LEVEL='1'
           CIBW_BUILD_VERBOSITY_WINDOWS: 2
-          CIBW_SKIP: "*pypy* *pp* *cp36* *cp37* *cp38* *cp310* *cp311* *musl*"
+          CIBW_SKIP: "*pypy* *pp* *cp36* *cp37* *cp38* *cp39* *cp310* *cp311* *musl*"
 
       - name: Check wheels
         run: python -m twine check wheelhouse/*.whl
