--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -23,7 +23,7 @@ jobs:
           use-only-tar-bz2: true  # IMPORTANT: This needs to be set for caching to work properly!
           auto-update-conda: true
           auto-activate-base: false
-          activate-environment: teqpdocs
+          activate-environment: teqpflshdocs
           environment-file: doc/environment.yml
       - name: install teqpflsh, built from source
         # https://github.com/usnistgov/ChebTools/blob/master/README.md#prerequisites regarding the need for libgcc
