Fix dynamic linkage of GEOS
On mac, fix runtime linkage. One OS down...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,6 @@ find_package(Python 3.8 COMPONENTS Interpreter Development.Module REQUIRED)
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(BUILD_SHARED_LIBS FALSE CACHE BOOL "Use shared libraries for GEOS, due to the LGPL v2.1 license")
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/externals/geos EXCLUDE_FROM_ALL)
-set(BUILD_SHARED_LIBS FALSE  CACHE BOOL "Everything else is statically linked")
-MESSAGE(STATUS "Fix dynamic loading of GEOS; static linking seems like the only feasible option currently")
-    
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/externals/nanobind)
-
 set(TEQP_NO_TESTS TRUE CACHE BOOL "No test targets for teqp (quite slow to compile)")
 set(TEQP_NO_PYTHON TRUE CACHE BOOL "No pybind11 targets for teqp (quite slow to compile)")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/externals/teqp)
@@ -19,6 +12,16 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/externals/teqp)
 set(NANOFLANN_BUILD_EXAMPLES FALSE CACHE BOOL "No nanoflann examples")
 set(NANOFLANN_BUILD_TESTS FALSE CACHE BOOL "No nanoflann tests")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/externals/nanoflann)
+
+set(BUILD_SHARED_LIBS TRUE CACHE BOOL "Use shared libraries for GEOS, due to the LGPL v2.1 license")
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/externals/geos EXCLUDE_FROM_ALL)
+set(BUILD_SHARED_LIBS FALSE CACHE BOOL "Everything else is statically linked")
+# MESSAGE(STATUS "Fix dynamic loading of GEOS; static linking seems like the only feasible option currently")
+    
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/externals/nanobind)
+
+set(CMAKE_INSTALL_RPATH "@loader_path")
+set(INSTALL_RPATH "@loader_path")
 
 set(NAME teqpflsh)
 
@@ -52,7 +55,7 @@ endif()
 
 # Install directive for scikit-build-core
 install(TARGETS _${NAME}_impl LIBRARY DESTINATION ${NAME})
-# install(TARGETS geos LIBRARY DESTINATION ${NAME})
+install(TARGETS geos LIBRARY DESTINATION ${NAME})
 
 # Alter the output location for editable builds so that GEOS 
 # is loaded properly
