--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -19,10 +19,9 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v3
         with:
           # mamba-version: "*"
-          channels: conda-forge, defaults
+          channels: conda-forge
           use-only-tar-bz2: true  # IMPORTANT: This needs to be set for caching to work properly!
           auto-update-conda: true
-          auto-activate-base: false
           activate-environment: teqpflshdocs
           environment-file: doc/environment.yml
       - name: install teqpflsh, built from source
