--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -24,6 +24,7 @@ jobs:
           channels: conda-forge
           use-only-tar-bz2: true  # IMPORTANT: This needs to be set for caching to work properly!
           auto-update-conda: true
+          conda-remove-defaults: true
           activate-environment: teqpflshdocs
           environment-file: doc/environment.yml
       - name: install teqpflsh, built from source
