--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ if (SKBUILD AND APPLE)
   set(CMAKE_INSTALL_RPATH "@loader_path")
   set(INSTALL_RPATH "@loader_path")
 endif()
-if (SKBUILD AND APPLE)
+if (SKBUILD AND LINUX)
   set(CMAKE_INSTALL_RPATH "$ORIGIN")
   set(INSTALL_RPATH "$ORIGIN")
 endif()
