--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -16,13 +16,15 @@ jobs:
         uses: actions/checkout@v4
       - name: checkout submodules
         run: git submodule update --init --recursive
+      - name: fix pip
+        run: python -m ensurepip --upgrade
       - uses: conda-incubator/setup-miniconda@v3
         with:
           # mamba-version: "*"
-          channels: conda-forge, defaults
-          use-only-tar-bz2: true  # IMPORTANT: This needs to be set for caching to work properly!
-          auto-update-conda: true
-          auto-activate-base: false
+          # channels: conda-forge
+          # use-only-tar-bz2: true  # IMPORTANT: This needs to be set for caching to work properly!
+          # auto-update-conda: true
+          # conda-remove-defaults: true
           activate-environment: teqpflshdocs
           environment-file: doc/environment.yml
       - name: install teqpflsh, built from source
