Try to use clang on windows
Work around weird linking errors?

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,3 +36,8 @@ logging.level = "INFO"
 #cmake.args = ["-G Xcode", "-DXCODE_DEBUG_PYTHON=ON"]
 #cmake.args = ["-DVERBOSE=ON"]
 
+[tool.scikit-build.overrides."windows"]
+cmake.args = [
+    "-T",
+    "ClangCL"
+]
