--- a/.github/workflows/build_cibuildwheel.yml
+++ b/.github/workflows/build_cibuildwheel.yml
@@ -31,9 +31,9 @@ jobs:
       - name: Install cibuildwheel and other dependencies
         run: python -m pip install cibuildwheel==2.22.0 build wheel setuptools twine
 
-      # - name: Install LLVM (clang-cl) on windows
-      #   run: choco install -y llvm
-      #   if: runner.os == 'Windows'
+      - name: Install LLVM (clang-cl) on windows
+        run: choco install -y llvm
+        if: runner.os == 'Windows'
 
       - name: Build sdist
         run: pipx run build --sdist --outdir wheelhouse
