Fix setting of clang on windows

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,6 @@ logging.level = "INFO"
 #cmake.args = ["-G Xcode", "-DXCODE_DEBUG_PYTHON=ON"]
 #cmake.args = ["-DVERBOSE=ON"]
 
-[tool.scikit-build.overrides."windows"]
-cmake.args = [
-    "-T",
-    "ClangCL"
-]
+[[tool.scikit-build.overrides]]
+if.platform-system = "win32"
+cmake.args = ["-T", "ClangCL"]
