Disable a lot of models for much faster builds of teqp
Even a few more are possible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(Python 3.12 COMPONENTS Interpreter Development.Module REQUIRED)
 
 set(CMAKE_CXX_STANDARD 20)
 
+set(TEQP_DISABLED_FACTORIES "CPA,SAFTVRMIE,GENERICSAFT,SQUAREWELL,EXP6,2CLJF,MIE,MULTIFLUIDACTIVITY,PCSAFT,GERG200X,MULTIFLUIDASSOCIATION,LKP,ECSHUBERELY1994,AMMONIAWATERTILLNERROTH,  SOFTSAFT" CACHE STRING "Disable some unused models")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/externals/teqp)
 set_target_properties(teqpcpp PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
