--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set_target_properties(teqpcpp PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 set(NANOFLANN_BUILD_EXAMPLES FALSE CACHE BOOL "No nanoflann examples")
 set(NANOFLANN_BUILD_TESTS FALSE CACHE BOOL "No nanoflann tests")
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/externals/nanoflann)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/externals/nanoflann EXCLUDE_FROM_ALL)
 set_target_properties(nanoflann PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 
 set(BUILD_SHARED_LIBS TRUE CACHE BOOL "Use shared libraries for GEOS, due to the LGPL v2.1 license")
