--- a/.github/workflows/build_cibuildwheel.yml
+++ b/.github/workflows/build_cibuildwheel.yml
@@ -45,10 +45,12 @@ jobs:
         env:
           CIBW_ARCHS: auto64
           # CIBW_ARCHS_MACOS: "universal2"
-          CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=11.0 CMAKE_BUILD_PARALLEL_LEVEL='1'
+          # CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=11.0 CMAKE_BUILD_PARALLEL_LEVEL='1'
+          CIBW_ENVIRONMENT_MACOS: MACOSX_DEPLOYMENT_TARGET=11.0
           CIBW_TEST_COMMAND: python -c "import teqpflsh"
-          CIBW_ENVIRONMENT_LINUX: CXXFLAGS='-fconcepts' CMAKE_BUILD_PARALLEL_LEVEL='1'
-          CIBW_ENVIRONMENT_WINDOWS: CMAKE_BUILD_PARALLEL_LEVEL='1'
+          # CIBW_ENVIRONMENT_LINUX: CXXFLAGS='-fconcepts' CMAKE_BUILD_PARALLEL_LEVEL='1'
+          CIBW_ENVIRONMENT_LINUX: CXXFLAGS='-fconcepts'
+          # CIBW_ENVIRONMENT_WINDOWS: CMAKE_BUILD_PARALLEL_LEVEL='1'
           CIBW_BUILD_VERBOSITY_WINDOWS: 2
           CIBW_SKIP: "*pypy* *pp* *cp36* *cp37* *cp38* *cp39* *cp310* *cp311* *musl*"
 
